--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name": "sau412/mysql_lib",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "type": "library",
     "minimum-stability": "dev",
-    "require": {
+    "autoload": {
+        "files": ["db.php"]
     }
 }
